<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:id="@+id/settings_ip"
        android:defaultValue="192.168.2.176"
        android:entries="@array/ip_list_titles"
        android:entryValues="@array/ip_list_values"
        android:key="raspberry_ip"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/ip_label" />

    <EditTextPreference
        android:id="@+id/settings_port"
        android:defaultValue="8080"
        android:key="raspberry_port"
        android:title="@string/port_input_label"/>

    <EditTextPreference
        android:id="@+id/settings_phone_status"
        android:key="status_task_freq"
        android:title="@string/phone_status_freq_label"/>

    <EditTextPreference
        android:id="@+id/settings_coordinates"
        android:key="coo_task_freq"
        android:title="@string/coordinates_freq_label"/>

    <EditTextPreference
        android:id="@+id/settings_reconnect"
        android:key="reconnect_task_freq"
        android:title="@string/try_connect_freq_label"/>

    <EditTextPreference
        android:id="@+id/settings_delay"
        android:key="delay_task_freq"
        android:title="@string/task_delay_label"/>

    <EditTextPreference
        android:id="@+id/settings_max_conn"
        android:key="max_conn_retry"
        android:title="@string/max_connection_label"/>

</PreferenceScreen>